added mobile responsiveness to most pages

--- a/public/app/directives/footer/footer.html
+++ b/public/app/directives/footer/footer.html
@@ -1,4 +1,5 @@
 <div class="footerContainer">
+  <div class="">
 <ul>
   <li class="footerTitle" >Company</li>
   <a href="https://support.boostedboards.com/hc/en-us/articles/115001298027"><li class="footerlinks">Contact Us</li></a>
@@ -7,6 +8,8 @@
   <a href="https://boostedboards.com/terms-and-conditions/"><li class="footerlinks">Terms and Conditions</li></a>
   <a href="https://boostedboards.com/privacy/"><li class="footerlinks">Privacy Policy</li></a>
 </ul>
+  </div>
+  <div class="">
 <ul>
   <li class="footerTitle">Explore</li>
   <a href="https://www.reddit.com/r/boostedboards/"><li class="footerlinks">Forum</li></a>
@@ -14,6 +17,8 @@
   <a href="https://boostedboards.com/reviews/"><li class="footerlinks">Reviews</li></a>
   <a href="https://www.youtube.com/user/BoostedCommunity"><li class="footerlinks">Videos</li></a>
 </ul>
+  </div>
+  <div class="">
 <ul>
   <li class="footerTitle">Orders</li>
   <a href="https://boostedboards.com/battery-pack-recall/"><li class="footerlinks">Battery Pack Recall</li></a>
@@ -21,6 +26,7 @@
   <a ui-sref="store"><li class="footerlinks">Store</li></a>
   <a href="https://support.boostedboards.com/hc/en-us"><li class="footerlinks">Support</li></a>
 </ul>
+  </div>
 <div class="footerTitle"><div class="spacingfooter">Subscribe to our Newsletter</div>
   <div class='inputInfoFooter'>
   <input type="text" class='newsletter'placeholder=" email address" ng-model='emailsub' value="">
