--- a/public/app/directives/guarantee/guarantee.html
+++ b/public/app/directives/guarantee/guarantee.html
@@ -14,6 +14,7 @@ gladly take it back for a full refund.
   <div class="guaranteeSection">
     <p class="sectionGTitle">Financing Available</p>
     <p>Pay over time with easy, fixed monthly payments.</p>
+    <div class="lines"></div>
   </div>
   <div class="hrlines">
 
@@ -21,6 +22,7 @@ gladly take it back for a full refund.
   <div class="guaranteeSection">
     <p class="sectionGTitle">6 - Month Warranty</p>
     <p>Full protection for every single part of your board.</p>
+    <div class="lines"></div>
   </div>
   <div class="hrlines">
 
