--- a/public/app/routes/board/board.html
+++ b/public/app/routes/board/board.html
@@ -11,7 +11,7 @@
                 <button type="button" ng-click='showvideo = !showvideo' class="whiteButton whiteButtonColor videoButton"><i class="fa fa-youtube-play" aria-hidden="true">
        </i> WATCH VIDEO</button>
                 <div class="videoPopup" ng-if='showvideo'>
-                    <iframe width="900" height="500" frameborder=0 src="https://www.youtube.com/embed/VmJ-CiHRpOo?autoplay=1">
+                    <iframe frameborder=0 src="https://www.youtube.com/embed/VmJ-CiHRpOo?autoplay=1">
         </iframe>
                 </div>
 
@@ -124,7 +124,30 @@
              </div>POWERFUL BLUETOOTH CONNECTION</div>
      </div>
     </div>
-  </div>
+    <div class="remoteSmallContent">
+      <p class='beltTitle titleSize'>For beginners to pros</p>
+      <p class="bottomSpacing">No riding experience? No problem.
+        Multiple ride modes make it easier
+        than ever to jump on a board regardless
+        of your skill level. Start in beginner
+        mode, which goes up to 11mph, and work your
+        way up to pro, which tops out at 22mph.
+        Pro tip: Switch between different modes based
+         on riding terrain to maximize range and take
+         full advantage of your board.</p>
+         <div class='inline'>
+             <div class="boardspecs">
+                 <img class='photo' src="../../img/theBoard/squaresIcon.PNG" alt="">
+             </div>4 RIDE MODES</div>
+         <div class='inline'>
+             <div class="boardspecs">
+                 <img class='photo' src="../../img/theBoard/cautionIcon.PNG" alt="">
+             </div>FAST, RESPONSIVE BRAKING</div>
+         <div class='inline'>
+             <div class="boardspecs">
+                 <img class='photo' src="../../img/theBoard/bluetoothIcon.PNG" alt="">
+             </div>POWERFUL BLUETOOTH CONNECTION</div>
+     </div>
 </section>
 <div class="boardCarousel">
 <board-caro></board-caro>
