added full screen for video

--- a/public/app/routes/board/board.html
+++ b/public/app/routes/board/board.html
@@ -11,7 +11,7 @@
                 <button type="button" ng-click='showvideo = !showvideo' class="whiteButton whiteButtonColor videoButton"><i class="fa fa-youtube-play" aria-hidden="true">
        </i> WATCH VIDEO</button>
                 <div class="videoPopup" ng-if='showvideo'>
-                    <iframe frameborder=0 src="https://www.youtube.com/embed/VmJ-CiHRpOo?autoplay=1">
+                    <iframe allowfullscreen='true;' frameborder=0 src="https://www.youtube.com/embed/VmJ-CiHRpOo?autoplay=1">
         </iframe>
                 </div>
 
