--- a/public/app/routes/home/home.html
+++ b/public/app/routes/home/home.html
@@ -228,7 +228,7 @@
 <guarantee></guarantee>
 
 
-    <div class="reserveFooter">
+    <div ui-sref='reserve' class="reserveFooter">
         RESERVE NOW
     </div>
 <footer-view></footer-view>
