--- a/public/app/routes/board/board.html
+++ b/public/app/routes/board/board.html
@@ -240,6 +240,9 @@
     </div>
   </div>
 </section>
+<div ui-sref='reserve' class="reserveFooter">
+    RESERVE NOW
+</div>
 <help></help>
 <guarantee></guarantee>
 <footer-view></footer-view>
