--- a/public/app/routes/home/home.html
+++ b/public/app/routes/home/home.html
@@ -66,7 +66,7 @@
         </div>
         <img class='photo photoHeight' src="../../img/homePage/remote.JPG" alt="">
     </div>
-    <div class="homeDurable">
+    <div class="homeDurable bugfixer">
         <div class="homeSplitContent">
             <span class='homeSplitTitle'>Downright durable</span></br>
             <span>Boosted boards are built to withstand daily riding
@@ -222,7 +222,7 @@
 <section>
 
     <div class="trafficPic">
-        <img class='photo photoHeight miniTraffic' src="../../img/homePage/traffic.JPG" alt="">
+        <img class='photo miniTraffic' src="../../img/homePage/traffic.JPG" alt="">
     </div>
 </section>
 <guarantee></guarantee>
